@@ -6,7 +6,7 @@ The Powder Toy - 2021년 7월
 시뮬레이션의 업로드와 같은 기능을 사용하려면 [계정을 만드세요](https://powdertoy.co.uk/Register.html).
 The Powder Toy 공식 포럼은 [여기](https://powdertoy.co.uk/Discussions/Categories/Index.html)에 있습니다.
 
-무언가를 터뜨려 보고 싶은 적이 있나요? 또는 원자력 발전소를 직접 운영해 보고 싶으신 적은 있나요? 자신만의 CPU를 구현해보고 싶으신가요? The Powder Toy는 이 모든 것들을 직접 할 수 있게 만들어줍니다. 물론 이것 뿐만이 아닌 더 많은 것들을요!
+무언가를 터뜨려 보고 싶은 적이 있나요? 또는 원자력 발전소를 직접 운영해 보고 싶으신 적은 있나요? 자신만의 CPU를 구현해보고 싶으신가요? The Powder Toy는 이 모든 것들을 직접 할 수 있게 만들어줍니다. 물론 이뿐만이 아닌 더 많은 것들을요!
 
 The Powder Toy는 무료 물리학 샌드박스 게임으로써, 공기 압력 및 흐름, 열, 중력, 그리고 셀 수 없이 많은 물질들의 상호작용을 시뮬레이션합니다! 또한 복잡한 기계, 총, 폭탄, 현실적인 지형 및 거의 모든 것을 구성하는 데 사용할 수 있는 다양한 건축 자재, 액체, 가스 및 전자 부품도 모두 제공됩니다. 그리고 제공된 모든 것들을 활용하여 멋진 폭발을 구경하고, 복잡한 배선을 추가하고, 작은 스틱맨과 놀거나, 기계를 작동시킬 수 있습니다. 커뮤니티에서 만든 수천 개의 다른 저장 항목을 탐색하고 재생하거나 직접 업로드할 수 있습니다. 여러분의 창작물을 환영합니다!
 
@@ -44,7 +44,7 @@ TPT를 빌드하려면 [The Powder Toy 공식 위키](https://powdertoy.co.uk/Wi
 * 뭐지What (NeuroWhAI)
 * 파토매니아
 * Hopz
-* LeganDUST
+* LegenDUST
 
 사용된 라이브러리 및 애셋
 ===========================================================================
