@@ -1,3 +1,7 @@
 # This file is used by the starcatcher.us update server to pull changelogs for mod releases
 # Erase and replace the changelog for every release, do not just append changes to the end
 # Lines starting with # and empty lines are ignored
+
+Added Starcatcher server update link.
+Fixed some translatation.
+Fixed Script Manager button location.
